--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <properties>
    <junit.version>4.10</junit.version>
    <java.version>1.8</java.version>
-   <maven.compiler.version>3.3</maven.compiler.version>
+   <maven.compiler.version>3.1</maven.compiler.version>
     </properties>
   <dependencies>
    <dependency> 
@@ -33,5 +33,7 @@
    <scope>test</scope> 
    </dependency>
   </dependencies>
-  
+  <build>
+  <finalName>CucumberTest</finalName>
+  </build>
 </project>
